--- a/views/list.ejs
+++ b/views/list.ejs
@@ -26,6 +26,7 @@
         name="newItem"
         placeholder="New Item"
         autocomplete="off"
+        required
       >
       <button type="submit" name="list" value="<%= listTitle %>">+</button>
     </form>
